--- a/NewPjt/Base.lproj/Main.storyboard
+++ b/NewPjt/Base.lproj/Main.storyboard
@@ -1,24 +1,149 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="w6O-M4-HLm">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--第一頁-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="NewPjt" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4cw-wa-BOp">
+                                <rect key="frame" x="143.5" y="311.5" width="88" height="44"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="88" id="GPG-Vl-zDw"/>
+                                    <constraint firstAttribute="height" constant="44" id="uWy-dB-dVQ"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="下一頁"/>
+                                <connections>
+                                    <action selector="btnPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="q8q-w5-soT"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="4cw-wa-BOp" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="68N-pS-oaF"/>
+                            <constraint firstItem="4cw-wa-BOp" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bRO-IV-AFa"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="第一頁" id="6Gl-yG-UjK"/>
+                    <connections>
+                        <outlet property="myBtn" destination="4cw-wa-BOp" id="Gfo-8v-4g1"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1868" y="83.208395802098963"/>
+        </scene>
+        <!--果思設計-->
+        <scene sceneID="RTw-dN-wv8">
+            <objects>
+                <viewController storyboardIdentifier="SecondViewController" id="umn-K4-puW" customClass="SecondViewController" customModule="NewPjt" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8VA-DS-JSM">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UOk-kf-EJ9">
+                                <rect key="frame" x="0.0" y="-20" width="375" height="687"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="-50" translatesAutoresizingMaskIntoConstraints="NO" id="uhV-RN-YT6">
+                                        <rect key="frame" x="0.0" y="0.0" width="377" height="1150"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dog" translatesAutoresizingMaskIntoConstraints="NO" id="36l-Tt-1cd">
+                                                <rect key="frame" x="0.0" y="0.0" width="377" height="300"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="300" id="vUF-s4-0vG"/>
+                                                    <constraint firstAttribute="width" constant="377" id="zHv-gg-oMK"/>
+                                                </constraints>
+                                            </imageView>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="by2-th-bq4">
+                                                <rect key="frame" x="0.0" y="250" width="377" height="900"/>
+                                                <color key="backgroundColor" systemColor="systemRedColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="900" id="zwD-ey-3Ux"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="by2-th-bq4" firstAttribute="leading" secondItem="uhV-RN-YT6" secondAttribute="leading" id="4D3-B6-GKg"/>
+                                            <constraint firstAttribute="trailing" secondItem="by2-th-bq4" secondAttribute="trailing" id="7nW-T4-R4L"/>
+                                            <constraint firstItem="36l-Tt-1cd" firstAttribute="leading" secondItem="uhV-RN-YT6" secondAttribute="leading" id="Bng-oh-VpB"/>
+                                            <constraint firstItem="36l-Tt-1cd" firstAttribute="top" secondItem="uhV-RN-YT6" secondAttribute="top" id="bRT-Y4-COn"/>
+                                            <constraint firstAttribute="trailing" secondItem="36l-Tt-1cd" secondAttribute="trailing" id="qFO-Rn-sJS"/>
+                                        </constraints>
+                                    </stackView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="uhV-RN-YT6" firstAttribute="trailing" secondItem="uAc-hq-8yP" secondAttribute="trailing" id="KTc-Da-Xl3"/>
+                                    <constraint firstItem="uhV-RN-YT6" firstAttribute="bottom" secondItem="uAc-hq-8yP" secondAttribute="bottom" id="WQX-uD-TBw"/>
+                                    <constraint firstItem="uhV-RN-YT6" firstAttribute="leading" secondItem="uAc-hq-8yP" secondAttribute="leading" id="aNb-Nv-uWw"/>
+                                    <constraint firstItem="uhV-RN-YT6" firstAttribute="top" secondItem="UOk-kf-EJ9" secondAttribute="top" id="dwl-LL-RHW"/>
+                                    <constraint firstItem="uhV-RN-YT6" firstAttribute="top" secondItem="uAc-hq-8yP" secondAttribute="top" id="o3R-ft-aKz"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="uAc-hq-8yP"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="WFy-Ea-VP2"/>
+                            </scrollView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="2fM-me-XEY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="UOk-kf-EJ9" secondAttribute="trailing" id="8UV-89-TTJ"/>
+                            <constraint firstItem="UOk-kf-EJ9" firstAttribute="leading" secondItem="8VA-DS-JSM" secondAttribute="leading" id="mDJ-fm-0XC"/>
+                            <constraint firstAttribute="bottom" secondItem="UOk-kf-EJ9" secondAttribute="bottom" id="nlE-Op-rGW"/>
+                            <constraint firstItem="UOk-kf-EJ9" firstAttribute="top" secondItem="8VA-DS-JSM" secondAttribute="top" constant="-20" id="xPB-oh-40p"/>
+                        </constraints>
+                    </view>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="果思設計" id="Qj9-Un-tU3"/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="myImgView" destination="36l-Tt-1cd" id="d6g-Ef-uuv"/>
+                        <outlet property="myScrollView" destination="UOk-kf-EJ9" id="ZJt-q9-nPE"/>
+                        <outlet property="myView" destination="by2-th-bq4" id="UNP-AL-569"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eLo-Be-dIA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2730" y="82"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="T4u-7k-8yk">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="w6O-M4-HLm" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="4hR-46-sud">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <navigationBarAppearance key="scrollEdgeAppearance"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="6tV-DE-3iI"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DAg-z0-ELo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1161" y="83"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="dog" width="1050" height="700"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
